test/spec_vectors/simd_i32x4_cmp/fail/module_15.wat
(module (func $i32x4.ne-arg-empty (result v128) (i32x4.ne)))